<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    tools:context=".fragment.FontOptionPickFragment"
    >

    <TextView
        android:id="@+id/fontOptionPickTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:letterSpacing="0.15"
        android:padding="8dp"
        android:text="@string/pick_an_option"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <RadioGroup
        android:id="@+id/fontOptionPickRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fontOptionPickTitleTV"
        tools:ignore="RtlSymmetry">

        <RadioButton
            android:id="@+id/fontOptionPickFontRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_font"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:paddingStart="32dp"
            android:text="@string/change_font_style"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/fontOptionPickColorRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_color_lens"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:paddingStart="32dp"
            android:text="@string/change_font_color"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/fontOptionPickSizeRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:drawableStart="@drawable/ic_size"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:paddingStart="32dp"
            android:text="@string/change_font_size"
            android:textColor="@color/textColor" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
