<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/bottom_sheet_background"
	tools:context=".fragment.CustomColorFragment">

	<TextView
		android:id="@+id/customColorTitleTV"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:letterSpacing="0.15"
		android:padding="8dp"
		android:text="@string/pick_a_color"
		android:textColor="@color/accentTextColor"
		app:layout_constraintBottom_toTopOf="@id/customColorColorPicker"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.skydoves.colorpickerview.ColorPickerView
		android:id="@+id/customColorColorPicker"
		android:layout_width="0dp"
		android:layout_height="320dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/customColorTitleTV" />

	<Button
		android:id="@+id/customColorSubmitButton"
		style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/submit"
		android:textColor="@color/accentTextColor"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/customColorColorPicker" />

	<Button
		android:id="@+id/customColorCancelButton"
		style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:text="@string/cancel"
		android:textColor="@color/accentTextColor"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/customColorSubmitButton"
		app:layout_constraintTop_toBottomOf="@id/customColorColorPicker" />

</androidx.constraintlayout.widget.ConstraintLayout>