<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGColor"
    tools:context=".fragment.AddNewFragment"
    tools:ignore="HardcodedText">

    <ImageView
        android:id="@+id/addNewSampleIconImageView"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/colorAccent"
        android:contentDescription="Add New Screen Add Icon"
        android:elevation="12dp"
        android:foregroundGravity="center"
        android:src="@drawable/ic_post_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addQuoteTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foregroundGravity="center"
        android:textColorHint="@color/editTextColor"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addNewSampleIconImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addQuoteTIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quote"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollbars="vertical"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addAuthorTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foregroundGravity="center"
        android:textColorHint="@color/editTextColor"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addQuoteTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addAuthorTIE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            android:inputType="textCapWords|textMultiLine"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/editTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdd"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@id/addAuthorTIL" />

    <Button
        android:id="@+id/buttonCancel"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@id/buttonAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAuthorTIL" />

</androidx.constraintlayout.widget.ConstraintLayout>