<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/BGColor"
	tools:context=".acra.ACRAErrorActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TextView
			android:id="@+id/errorActivityPackageNameTV"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="4dp"
			android:textColor="@color/textColor" />

		<TextView
			android:id="@+id/errorActivityVersionNameTV"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="4dp"
			android:textColor="@color/textColor" />

		<TextView
			android:id="@+id/errorActivityVersionCodeTV"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="4dp"
			android:textColor="@color/textColor" />

		<TextView
			android:id="@+id/errorActivityAndroidVersionTV"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="4dp"
			android:textColor="@color/textColor" />

		<TextView
			android:id="@+id/errorActivityAppStartDateTV"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="4dp"
			android:textColor="@color/textColor" />

		<TextView
			android:id="@+id/errorActivityStackTraceTV"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="4dp"
			android:background="@color/dialogBGColor"
			android:padding="8dp"
			android:textColor="@color/textColorLight" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/errorActivityUserCommentTIL"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="4dp"
			android:foregroundGravity="center"
			android:textColorHint="@color/textColorLight"
			app:hintAnimationEnabled="true"
			app:hintEnabled="true"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/addNewTitleTV">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/errorActivityUserCommentTIE"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/your_comment"
				android:inputType="textCapSentences"
				android:scrollbars="vertical"
				android:textColor="@color/textColor"
				android:textColorHint="@color/textColor" />

		</com.google.android.material.textfield.TextInputLayout>

		<Button
			android:id="@+id/errorActivityTelegramReportTV"
			style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="2dp"
			android:gravity="center"
			android:text="@string/report_via_telegram"
			android:textColor="@color/accentTextColor" />

		<Button
			android:id="@+id/errorActivityGitHubReportTV"
			style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="2dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="4dp"
			android:gravity="center"
			android:text="@string/report_via_github"
			android:textColor="@color/accentTextColor" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="8dp"
			android:gravity="center"
			android:text="@string/error_report_note"
			android:textColor="@color/textColor" />

	</LinearLayout>
</ScrollView>